<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/press_button"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="189dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/LibLines"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="195dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Spectrum"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/element" />

        <TextView
            android:id="@+id/wavelength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/wavelength" />

        <TextView
            android:id="@+id/relativeIntensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/relint" />

        <TextView
            android:id="@+id/wavelengthSpectrum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/wavelength" />

        <TextView
            android:id="@+id/intensitySpectrum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/intensity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="85dp">

        <ListView
            android:id="@+id/listViewLibLines"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteY="10dp" />

        <ListView
            android:id="@+id/listViewSpectrum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="189dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_red"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_backgroundColor="#ccffffff"
        app:menu_fab_label="">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_line_graph"
            app:fab_size="mini"
            app:fab_label="@string/graph" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_use_embedded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_use_embedded_black_30dp"
            app:fab_size="mini"
            app:fab_label="@string/use_embedded" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_spectrum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_circle_black_30dp"
            app:fab_size="mini"
            app:fab_label="@string/choose_spectrum" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.constraint.ConstraintLayout>